2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-email.c:
	* src/trackerd/tracker-db-email.h:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-plugin.h:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-email-utils.h:
	* src/trackerd/tracker-email.c:
	* src/trackerd/tracker-email.h:
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-process.c: Remove all email modules here,
	this code is all done in the indexer now or is in the process of
	being moved over. It is redundant in the daemon.

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Cleaned up some code.
	
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-process-files.h:
	* src/trackerd/tracker-process.c:
	* src/trackerd/tracker-utils.c: Renamed tracker-process-files.[ch]
	to tracker-process.[ch] since this module will be stripped and
	used to process all categories of data not just files.

2008-06-25  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-db/Makefile.am
	* tests/libtracker-db/tracker-db-manager-common.c
	* tests/libtracker-db/tracker-db-manager-common.h
	* tests/libtracker-db/tracker-db-manager-test-custom.c:
	Added test creating "custom attach" connections

2008-06-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/Makefile.am: Do not put libs in
	INCLUDES.

2008-06-25  Michael Biebl  <mbiebl@gmail.com>

	* filters/application/vnd.*: Use odt2txt instead of o3totxt. o3read
	has been deprecated and superseded by odt2txt. See also
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=477311